--- a/app/frontend/shared/components/base/Panel/BgImage/index.scss
+++ b/app/frontend/shared/components/base/Panel/BgImage/index.scss
@@ -42,4 +42,31 @@
   &-align-right {
     background-position: right;
   }
+
+  &__skeleton {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(
+      90deg,
+      $gray-darker 25%,
+      lighten($gray-darker, 12%) 50%,
+      $gray-darker 75%
+    );
+    background-size: 200% 100%;
+    animation: shimmer 1.5s ease-in-out infinite;
+    border-radius: inherit;
+  }
+}
+
+@keyframes shimmer {
+  0% {
+    background-position: 200% 0;
+  }
+
+  100% {
+    background-position: -200% 0;
+  }
 }
